hard-gists/3891365/run.log
=== Docker Run Log for 3891365 ===
Started at: Mi 29. Okt 14:05:02 CET 2025

[2025-10-29 14:05:02] START: Running container for 3891365
[2025-10-29 14:05:03] SUCCESS: Container c106c783ef38bd1f14efcaa9562e385325fba31e03e0a0746031b45d71cf3f1c started for 3891365
=== Container logs for 3891365 ===
  File "/snippet.py", line 32
    except Exception,e:
           ^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 3891365 ===
[2025-10-29 14:05:05] INFO: Container c106c783ef38bd1f14efcaa9562e385325fba31e03e0a0746031b45d71cf3f1c has stopped
